src/main/java/com/example/projectrserver/global/error/custom/CustomException.java
package com.example.projectrserver.global.error.custom;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;
}